# Vulkan-BuildingBlocks

./: .gitignore  LICENSE  QtVulkanWindow.cpp  QtVulkanWindow.h  README.md  VBB.pri  VBBBufferDynamic.cpp  VBBBufferDynamic.h  VBBBufferUniform.cpp  VBBBufferUniform.h  VBBCanvas.h  VBBDescriptors.cpp  VBBDescriptors.h  VBBFence.cpp  VBBInstance.cpp  VBBInstance.h  VBBPhysicalDevices.cpp  VBBPhysicalDevices.h  VBBPipelineCompute.cpp  VBBPipelineCompute.h  VBBPipelineGraphics.cpp  VBBPipelineGraphics.h  VBBShaderModule.cpp  VBBShaderModule.h  VBBTexture.cpp  VBBTextureStreaming.cpp  VBBTextureStreaming.h  VBBUtils.cpp  VBBUtils.h
Qt/: QtVulkanWindow.cpp  QtVulkanWindow.h  VBB.pri
Shaders/: Accumulator.comp  Accumulator.spv  StockShader_FakeLight.frag  StockShader_FakeLightTx.frag  StockShader_FakeLightTx.vert  StockShader_FakeLight_frag.spv  StockShader_Flat_Vert.spv  StockShader_Shaded_Frag.spv  StockShader_Shaded_Vert.spv
examples/Donut/: CMakeLists.txt  main.cpp
examples/Donut/iOS/: Info.plist
examples/Donut/macOS/: Info.plist
examples/DriverInfo/: CMakeLists.txt  main.cpp
examples/Orrery/: BuildInstructions.txt  CMakeLists.txt  ModelAxes.cpp  ModelAxes.h  ModelBase.cpp  ModelBase.h  ModelEarth.cpp  ModelEarth.h  ModelEarthOrbit.cpp  ModelEarthOrbit.h  ModelMoon.cpp  ModelMoon.h  ModelPlane.cpp  ModelPlane.h  ModelSun.cpp  ModelSun.h  Orrery.cpp  Orrery.h  main.cpp
examples/Orrery/OrreryData/: ._Floor.tga  ._HUD.tga  ._Marslike.tga  ._MilkyWay.tga  ._Pyramid.tga  ._SUN.tga  ._Terra.tga  Floor.tga  HUD.tga  Marslike.tga  Pyramid.tga  SUN.tga  StockShader_FakeLight.vert  StockShader_FakeLight_vert.spv  StockShader_Flat.frag  StockShader_Flat.vert  StockShader_Shaded.vert  StockShader_TxModulate.frag  StockShader_TxModulate.vert  Terra.tga
examples/Orrery/macOS/: Info.plist
examples/SphereWorld/: CMakeLists.txt  SphereWorld.cpp
examples/SphereWorld/macOS/: Info.plist
include/: AppleTools.h  StopWatch.h  VBBBufferDynamic.h  VBBBufferStatic.h  VBBBufferUniform.h  VBBCanvas.h  VBBDescriptors.h  VBBDevice.h  VBBFence.h  VBBInstance.h  VBBPhysicalDevices.h  VBBPipelineCompute.h  VBBPipelineGraphics.h  VBBShaderModule.h  VBBSingleShotCommand.h  VBBTexture.h  VBBTextureStreaming.h  VBBUtils.h  VBBUtilsUnitAxes.h
src/: AppleTools.mm  VBBBufferDynamic.cpp  VBBBufferStatic.cpp  VBBCanvas.cpp  VBBDescriptors.cpp  VBBDevice.cpp  VBBFence.cpp  VBBInstance.cpp  VBBPhysicalDevices.cpp  VBBPipelineCompute.cpp  VBBPipelineGraphics.cpp  VBBShaderModule.cpp  VBBTexture.cpp  VBBTextureStreaming.cpp  VBBUtils.cpp  VBBUtilsUnitAxes.cpp
